[tool.poetry]
name = "pybtex-apa7-style"
version = "0.1.0"
description = "Provides APA7 style for Pybtex"
authors = ["Chris Proctor <github.com@accounts.chrisproctor.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pybtex = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pybtex.style.formatting"]
apa7 = "formatting.apa:APAStyle"

[tool.poetry.plugins."pybtex.style.labels"]
apa7 = "labels.apa:LabelStyle"

[tool.poetry.plugins."pybtex.style.names"]
firstlast = "names.firstlast:NameStyle"


